--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -53,8 +54,8 @@ dependencies {
     kapt project(":libnavcompiler")
     //endregion
 
-    //region FastJson
-    implementation 'com.alibaba:fastjson:1.2.75'
+    //region Gson
+    implementation 'com.google.code.gson:gson:2.8.6'
     //endregion
 
 }
