--- a/app/src/main/assets/main_tabs_config.json
+++ b/app/src/main/assets/main_tabs_config.json
@@ -36,7 +36,7 @@
       "size": 24,
       "enable": true,
       "index": 4,
-      "pageUrl": "main/tabs/my",
+      "pageUrl": "main/tabs/mine",
       "title": "我的"
     }
   ]
